# webinar-ai-coding-for-beginners

./: CLAUDE.md  PROMPTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/my_tic_tac_toe/: __init__.py  __main__.py  player.py  renderer.py
src/my_tic_tac_toe/cascade/: __init__.py  animation.py  keyboard.py  particle.py
tests/: test_renderer.py
